--- a/bt2202/assets/css/main2.css
+++ b/bt2202/assets/css/main2.css
@@ -26,8 +26,6 @@ body{
     font-size: 18px;
 }
 
-.show-btn,
-.hide-btn,
 .logout-btn{
     padding: 10px 24px;
     margin: 16px;
@@ -37,23 +35,16 @@ body{
     transition: 0.25s;
 }
 
-.show-btn:hover,
-.hide-btn:hover,
-.logout-btn:hover{
+.logout-btn:hover,
+.del-btn{
     transform: scale(0.9);
     cursor: pointer;
 }
 
-.show-btn{
-    background-color: rgb(90, 218, 218);
-}
-
-.hide-btn{
-    background-color: rgb(235, 180, 63);
-}
 
 .table__stt,
-.table__age{
+.table__age,
+.table__edit{
     padding: 8px 16px;
 }
 
@@ -64,4 +55,13 @@ body{
 
 .table__email{
     padding: 8px 120px;
+}
+
+.del-btn{
+    padding: 4px;
+    color: white;
+    background-color: rgb(228, 60, 60);
+    border: none;
+    border-radius: 5px;
+    transition: 0.25s;
 }
